k8s/frontapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontapp
  labels:
    homework: frontapp
    training: block3
spec:
  selector:
    homework: frontapp
    training: block3
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
