k8s/frontapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontapp-ingress
  labels: 
    homework: frontapp
    training: block3
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontapp-service
            port:
              number: 8080
